<resources>
    <string name="app_name">Orange</string>
    <string name="ic_found">&#xe686;</string>
    <string name="ic_privacy">&#xe842;</string>
    <string name="ic_trash">&#xe9d4;</string>
    <string name="ic_bookmark">&#xe66a;</string>
    <string name="ic_theme">&#xe501;</string>
    <string name="ic_history">&#xe784;</string>
    <string name="ic_internet">&#xe781;</string>
    <string name="ic_reload">&#xe788;</string>
    <string name="ic_message">&#xe78a;</string>
    <string name="ic_quit">&#xe78c;</string>
    <string name="ic_setting">&#xe78e;</string>
    <string name="ic_save">&#xe791;</string>
    <string name="ic_store">&#xe792;</string>
    <string name="ic_minus_square">&#xe796;</string>
    <string name="ic_border">&#xe7a9;</string>
    <string name="ic_user">&#xe7ae;</string>
    <string name="ic_batch_folding">&#xe7bf;</string>
    <string name="ic_certificate">&#xe7c0;</string>
    <string name="ic_insurance">&#xe7c1;</string>
    <string name="ic_home">&#xe7c6;</string>
    <string name="ic_like">&#xe7c8;</string>
    <string name="ic_unlike">&#xe7c9;</string>
    <string name="ic_unlock">&#xe7ca;</string>
    <string name="ic_lock">&#xe7cb;</string>
    <string name="ic_shopping">&#xe7cf;</string>
    <string name="ic_scan">&#xe7d4;</string>
    <string name="ic_camera">&#xe7d7;</string>
    <string name="ic_image">&#xe7de;</string>
    <string name="ic_video">&#xe7da;</string>
    <string name="ic_heart">&#xe7df;</string>
    <string name="ic_star">&#xe7e0;</string>
    <string name="ic_scissor">&#xe7e6;</string>
    <string name="ic_share">&#xe7e7;</string>
    <string name="ic_circle_fill">&#xe502;</string>
    <string name="ic_right">&#xe7eb;</string>
    <string name="ic_left">&#xe7ec;</string>
    <string name="ic_up">&#xe7ed;</string>
    <string name="ic_down">&#xe7ee;</string>
    <string name="ic_auto_fullscreen">&#xe7ef;</string>
    <string name="ic_normal_screen">&#xe62e;</string>
    <string name="ic_fullscreen">&#xe739;</string>
    <string name="ic_menu">&#xe7f4;</string>
    <string name="ic_code">&#xe60a;</string>
    <string name="ic_resources_fang">&#xe715;</string>
    <string name="ic_desktop">&#xe843;</string>
    <string name="ic_gift">&#xe844;</string>
    <string name="ic_fire">&#xe845;</string>
    <string name="ic_heart_fill">&#xe849;</string>
    <string name="ic_left_top">&#xe701;</string>
    <string name="ic_audio">&#xe897;</string>
    <string name="ic_zoom_in">&#xe898;</string>
    <string name="ic_double_circle">&#xe676;</string>
    <string name="ic_search">&#xe8ef;</string>
    <string name="ic_plus">&#xe8fe;</string>
    <string name="ic_sky_net">&#xe601;</string>
    <string name="ic_read">&#xe602;</string>
    <string name="ic_forbid_image">&#xe604;</string>
    <string name="ic_more">&#xe78d;</string>
    <string name="ic_translate">&#xe633;</string>
    <string name="ic_ad_mark">&#xe650;</string>
    <string name="ic_download">&#xe7f1;</string>
    <string name="ic_close">&#xe7fe;</string>
    <string name="ic_lock_fill">&#xe86a;</string>
    <string name="ic_circle_plus">&#xe532;</string>
    <string name="ic_arrow_left">&#xe7f0;</string>
    <string name="ic_folder_add">&#xe7d2;</string>
    <string name="ic_folder_fill">&#xe85e;</string>
    <string name="ic_tag">&#xe7e4;</string>
    <string name="ic_tags">&#xe7e5;</string>
    <string name="ic_folder">&#xe7d1;</string>
    <string name="ic_file">&#xe7bb;</string>
    <string name="ic_play">&#xe796;</string>
    <string name="ic_link">&#xe7e2;</string>
    <string name="ic_check">&#xe7fd;</string>
    <string name="search_or_input">搜索或输入网址</string>
    <string name="prf_theme_color">theme_color</string>
    <string name="quit_hint">再次点击退出</string>
    <string name="scan">扫码</string>
    <string name="share">分享</string>
    <string name="read_mode">阅读模式</string>
    <string name="image_mode">看图模式</string>
    <string name="mark_ad">标记广告</string>
    <string name="find_in_page">页内查找</string>
    <string name="save_resource_offline">离线保存</string>
    <string name="translation">翻译</string>
    <string name="view_source_code">查看源码</string>
    <string name="detect_resource">资源嗅探</string>
    <string name="add_to_home_page">添加主页</string>
    <string name="sky_net">天网</string>
    <string name="privacy">隐身</string>
    <string name="vision">视野</string>
    <string name="desktop">电脑</string>
    <string name="found">发现</string>
    <string name="history">历史</string>
    <string name="bookmark">书签</string>
    <string name="collect">收藏</string>
    <string name="theme">主题</string>
    <string name="download">下载</string>
    <string name="setting">设置</string>
    <string name="quit">退出</string>
    <string name="webview_not_available_hint">无可用页面</string>
    <string name="forbid_image">无图</string>
    <string name="cancel">取消</string>
    <string name="search">搜索</string>
    <string name="open">打开</string>
    <string name="go">前往</string>
    <string name="cloud_sync">云同步</string>
    <string name="login_register">登录/注册</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="general_setting">通用选项</string>
    <string name="web_setting">网页选项</string>
    <string name="clear_cache">清除缓存</string>
    <string name="ad_block">广告拦截</string>
    <string name="accept_ad">可接受广告</string>
    <string name="library">实验室</string>
    <string name="custom_config">自定义配置</string>
    <string name="action_and_gesture">操作与手势</string>
    <string name="search_engine">搜索引擎</string>
    <string name="download_setting">下载设置</string>
    <string name="support_author">支持开发者</string>
    <string name="check_update">检查更新</string>
    <string name="about_us">关于我们</string>
    <string name="closed">已关闭</string>
    <string name="opened">已打开</string>
    <string name="email">电子邮箱</string>
    <string name="password">密码</string>
    <string name="login_tip">账户不存在会自动创建</string>
    <string name="auto_sync_bookmark">自动同步书签</string>
    <string name="bookmark_tip">你已拥有500个云书签空间</string>
    <string name="quit_login">退出登录</string>
    <string name="find_password">找回密码</string>
    <string name="tip_email_not_empty">邮箱不能为空</string>
    <string name="tip_password_not_empty">密码不能为空</string>
    <string name="address_bar">地址栏</string>
    <string name="address_bar_show_item">地址栏显示</string>
    <string name="view_mode">视野模式</string>
    <string name="address_bar_show_title">显示标题</string>
    <string name="auto_vision_mode">自动视野</string>
    <string name="fullscreen">全屏</string>
    <string name="record_search_history">搜索记录</string>
    <string name="show_clipboard_when_search">搜索时显示剪贴板</string>
    <string name="theme_and_style">显示与风格</string>
    <string name="color_style">色彩风格</string>
    <string name="colorful">彩色</string>
    <string name="no_color">褪色</string>
    <string name="color_pure_black">醇黑</string>
    <string name="color_dye_ink">染墨</string>
    <string name="color_art">艺术</string>
    <string name="immerse_browse_style">沉浸式浏览效果</string>
    <string name="add_shadow_to_white_status_bar">为白色状态栏加阴影</string>
    <string name="add_shadow_to_white_navigation_bar">为白色导航栏加阴影</string>
    <string name="language_and_font">语言与字体</string>
    <string name="font_size">字体大小</string>
    <string name="font_size_super_small">特小号</string>
    <string name="font_size_small">小号</string>
    <string name="font_size_middle">中号</string>
    <string name="font_size_large">大号</string>
    <string name="font_size_super_large">特大号</string>
    <string name="language">语言</string>
    <string name="language_follow_system">跟随系统</string>
    <string name="language_chinese">中文(简体)</string>
    <string name="language_english">English</string>
    <string name="ua_setting">UA设置</string>
    <string name="ua_android">Android</string>
    <string name="ua_iphone">iPhone</string>
    <string name="ua_iPad">iPad</string>
    <string name="ua_pc">电脑</string>
    <string name="ua_wap">wap</string>
    <string name="secure_and_privacy">安全与隐私</string>
    <string name="refuse_track">拒绝跟踪</string>
    <string name="hide_device_info">隐藏设备信息</string>
    <string name="show_https_icon">显示HTTPS标识</string>
    <string name="show_no_secure_https_icon">显示不安全的HTTPS提示</string>
    <string name="intercept_alert">拦截弹出窗口</string>
    <string name="intercept_open_app">拦截打开外部应用</string>
    <string name="give_tip">选择提示</string>
    <string name="not_intercept">不拦截</string>
    <string name="intercept_all">拦截所有</string>
    <string name="keep_last_page">保存最后浏览的网页</string>
    <string name="super_cache">超级缓存</string>
    <string name="super_cache_tip">开启超级缓存后，网页将优先加载缓存内容，可能导致网页刷新不及时，请谨慎开启</string>
    <string name="page_cache">网页缓存</string>
    <string name="form_cache">表单缓存</string>
    <string name="browser_history">浏览历史</string>
    <string name="cookies">Cookies</string>
    <string name="password_cache">密码缓存</string>
    <string name="search_history">搜索记录</string>
    <string name="file_cache">文件缓存</string>
    <string name="start_clean">开始清理</string>
    <string name="search_engine_baidu">百度</string>
    <string name="custom_search_engine">自定义搜索</string>
    <string name="sky_net_tip">天网恢恢，疏而不漏。对于超多广告的野生网站，开启天网将进入强力广告过滤模式。可能造成误伤，如非必要请勿开启。</string>
    <string name="import_bookmarks">导入书签</string>
    <string name="auto_video_detect">自动嗅探视频</string>
    <string name="site_recommend">资源推荐</string>
    <string name="site_recommend_tip">为您推荐精彩网站和内容</string>
    <string name="double_click_blank_to_flip">双击网页空白处翻页</string>
    <string name="page_pull_to_fresh">网页边缘下拉刷新</string>
    <string name="edge_forward_back">边缘滑动前进后退</string>
    <string name="control_bar">控制栏</string>
    <string name="show_page_count">显示窗口数量</string>
    <string name="forward_button_long_press_shortcut">前进按钮快捷菜单</string>
    <string name="forward_button_long_press_tip">你也可以长按前进按钮来选择快捷菜单</string>
    <string name="ad_block_status">已拦截页面广告0条</string>
    <string name="show_tip_when_block_ad">拦截时显示提示</string>
    <string name="default_ad_block_rule">默认规则</string>
    <string name="ad_block_subscriptions">AdBlock订阅列表</string>
    <string name="ad_block_update_connection">AdBlock联网更新</string>
    <string name="ab_block_status">已拦截?条</string>
    <string name="my_ad_block_rules">我的规则</string>
    <string name="white_list_sites">白名单网站</string>
    <string name="add_white_list_sites_you_not_block">添加你不希望拦截的网站的域名</string>
    <string name="help">帮助</string>
    <string name="auto_install_download_app">自动安装下载应用</string>
    <string name="download_manager">下载器</string>
    <string name="system_download_manager">系统下载器</string>
    <string name="download_path">下载目录</string>
    <string name="default_download_path">/Download/</string>
    <string name="show_domain">显示域名</string>
    <string name="show_title">显示标题</string>
    <string name="show_address">显示网址</string>
    <string name="normal_vision_mode">标准视野</string>
    <string name="max_vision_mode">最大视野</string>
    <string name="custom_ua">自定义UA</string>
    <string name="user_agent_android">Mozilla/5.0 (Linux; Android 8.0; Pixel 2 Build/OPD3.170816.012) AppleWebKit/537.36
        (KHTML, like Gecko) Chrome/74.0.3729.108 Mobile Safari/537.36
    </string>
    <string name="user_agent_iphone">Mozilla/5.0 (iPhone; CPU iPhone OS 11_0 like Mac OS X) AppleWebKit/604.1.38 (KHTML,
        like Gecko) Version/11.0 Mobile/15A372 Safari/604.1
    </string>
    <string name="user_agent_iPad">Mozilla/5.0 (iPad; CPU OS 11_0 like Mac OS X) AppleWebKit/604.1.34 (KHTML, like
        Gecko) Version/11.0 Mobile/15A5341f Safari/604.1
    </string>
    <string name="user_agent_pc">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko)
        Chrome/74.0.3729.108 Safari/537.36
    </string>
    <string name="saved_images">保存的图片</string>
    <string name="saved_pages">离线网页</string>
    <string name="saved_videoes">保存的视频</string>
</resources>