<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="activityViewModel" type="com.dev.orangebrowser.bloc.host.MainViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout android:id="@+id/header" android:layout_width="0dp" android:layout_height="44dp"
                     android:paddingTop="4dp"
                     android:background="@{activityViewModel.theme.colorPrimary}"
                     app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
            <com.dev.view.IconfontTextView
                    android:id="@+id/go_back"
                    android:layout_width="48dp"
                    android:layout_height="42dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:text="@string/ic_arrow_left"
                    android:gravity="center"
                    android:layout_gravity="start|center_vertical"/>
            <TextView android:text="@string/history"
                      android:gravity="center"
                      android:textSize="18sp"
                      android:textColor="@color/colorWhite"
                      android:layout_width="match_parent"
                      android:layout_height="match_parent"/>
            <com.dev.view.IconfontTextView
                    android:id="@+id/clear"
                    android:layout_width="48dp"
                    android:layout_height="42dp"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:text="@string/ic_trash"
                    android:gravity="center"
                    android:layout_gravity="end|center_vertical"/>
        </FrameLayout>
        <com.dev.orangebrowser.view.LongClickFrameLayout
                android:id="@+id/container"
                app:layout_constraintTop_toBottomOf="@+id/header"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerView"
                    android:background="@color/color_F8F8F8"
                    android:overScrollMode="never"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
        </com.dev.orangebrowser.view.LongClickFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>